Version 2.4.2
-------------
Fix crash after recording with pulseaudio external audio.
Fix possible crash when converting from YUV420 to UYVY / YUYV.
Fix memory issue in audio triggered video generators.
Fix occasional hang in shutdown via OSC.
Minor fixes for headless (nogui, noplaywin) modes.
Increase size of debug output window when encoding (Regression).
Fix for compiling without jack.
Fix crash in mask_overlay effect.
Fix some threading problems when running audio and video effects together.
Improve OSC responsiveness during playback.
Fixes for beat_detector and edge plugins.
Fix latency issue with pulseaudio external input.








Version 2.4.1 (9 Aug 2015)
--------------------------
NOTE: the LiVES homepage has moved to http://lives-video.com

General compilation fixes.
Compilation fixes for libav.
Minor fixes for BSD compilation.
Minor fix for initialisation of "alien_overlay" effect.
Fix image file previews within File Open dialog (regression).







Version 2.4.0 (3 May 2015)
-------------------------
Implement workaround for expose event problems in gtk+ 3.10.
Fix threading crash in multitrack.
Fix invalid saving of layouts in multitrack.
Fix sizes of scrolled windows inside dialog boxes (regression).
Fix timeline start position for gtkgrid widget in multitrack.
Fix "fade background mode" (b) so it looks nice again.
Stability fix for expose event during startup.
Stability fix for mkv_decoder with broken end frames.
Implement C++ language bindings (liblives).
Fixes for several smaller issues (Thomas Berger).
Code cleanup / reformat.
Updated translations to UK English, French, Galician, German, Russian and Simplified Chinese.






Version 2.2.8 (8 Feb 2015)
--------------------------
Fix crash in Insert Frames (regression).
Compilation fix for gtk+ 2.x
Compilation fixes for freeBSD
Add check for avformat_close_input in libav
Fix crash in projectM plugin.
Fix regression in x264_encoder.
Fix audio codec bug in mencoder_encoder.